[tool.poetry]
name = "aw-watcher-google-drive"
version = "0.1.0"
description = ""
authors = ["Kovas Palunas <kovas.palunas@gmail.com>"]
license = "MPL-2.0"
packages = [
    { include = "aw_watcher_google_drive", from = "src" }
]

[tool.poetry.scripts]
aw-watcher-google-drive = "aw_watcher_google_drive.main:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}
google-auth-oauthlib = "^0.4.3"
google-api-python-client = "^2.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
